--- a/files/homedir/.tmux.conf
+++ b/files/homedir/.tmux.conf
@@ -8,3 +8,4 @@ bind-key s command-prompt -p "send pane to:" "join-pane -t '%%'"
 bind-key C send-keys " | xclip -selection clipboard"
 
 set-window-option -g mode-keys vi
+setw -g mouse on
